@@ -2,9 +2,12 @@ from Acquisition import aq_parent, aq_inner
 from zope.component import adapter
 from zope.lifecycleevent.interfaces import IObjectAddedEvent
 from zope.lifecycleevent.interfaces import IObjectMovedEvent
-from Products.CMFPlone.interfaces import IFactoryTool
-
 from Products.PloneFormGen import interfaces
+try:
+    from Products.CMFPlone.interfaces import IFactoryTool
+except ImportError:
+    # plone 5
+    from Products.ATContentTypes.interfaces.factory import IFactoryTool  # noqa
 
 
 @adapter(interfaces.IPloneFormGenActionAdapter, IObjectAddedEvent)
