@@ -9,17 +9,20 @@ from Products.PloneFormGen.config import PROPERTY_SHEET_NAME, \
 
 from Products.PloneFormGen.interfaces.field import IPloneFormGenField
 from Products.PloneFormGen.interfaces.actionAdapter import \
-  IPloneFormGenActionAdapter
+    IPloneFormGenActionAdapter
 from Products.PloneFormGen.interfaces.fieldset import \
-  IPloneFormGenFieldset
+    IPloneFormGenFieldset
 from Products.PloneFormGen.interfaces.thanksPage import \
-  IPloneFormGenThanksPage
+    IPloneFormGenThanksPage
+from Products.CMFPlone.utils import getFSVersionTuple
+
 
 class HiddenProfiles(object):
     implements(INonInstallable)
 
     def getNonInstallableProfiles(self):
-        return [u'Products.PloneFormGen:loadtest',]
+        return [u'Products.PloneFormGen:loadtest', ]
+
 
 def update_kupu_resources(out, site):
     """ At the time of this writing, kupu's GS export/import
@@ -30,7 +33,7 @@ def update_kupu_resources(out, site):
 
     kupuTool = getToolByName(site, 'kupu_library_tool', None)
     # skip if no kupuTools
-    if kupuTool is None or getattr(kupuTool, 'getPortalTypesForResourceType', None) is None:
+    if kupuTool is None or getattr(kupuTool, 'getPortalTypesForResourceType', None) is None:  # noqa
         return
 
     typesTool = getToolByName(site, 'portal_types')
@@ -41,13 +44,14 @@ def update_kupu_resources(out, site):
             # kupu's resource list can accumulate old, no longer valid types;
             # it will throw an exception if we try to resave them.
             # So, let's clean the list.
-            valid_types = dict([ (t.id, 1) for t in typesTool.listTypeInfo()])
+            valid_types = dict([(t.id, 1) for t in typesTool.listTypeInfo()])
             linkable = [pt for pt in linkable if pt in valid_types]
 
             linkable.append('FormFolder')
-            kupuTool.updateResourceTypes(({'resource_type' : 'linkable',
-                                           'old_type'      : 'linkable',
-                                           'portal_types'  :  linkable},))
+            kupuTool.updateResourceTypes(({'resource_type': 'linkable',
+                                           'old_type': 'linkable',
+                                           'portal_types':  linkable},))
+
 
 def safe_add_purgeable_properties(out, site):
     """ In order to avoid a possible "feature" regression and
@@ -80,6 +84,14 @@ def importVarious(context):
         return
     out = []
     site = context.getSite()
+
+    if getFSVersionTuple()[0] == 5:
+        # if plone 5, we need to make sure archetypes related tools is installed
+        qi = getToolByName(site, 'portal_quickinstaller')
+        # install ATContentTypes if it isn't installed
+        if not qi.isProductInstalled('ATContentTypes'):
+            qi.installProducts(['ATContentTypes'])
+
     update_kupu_resources(out, site)
     safe_add_purgeable_properties(out, site)
 
@@ -111,10 +123,6 @@ def importVarious(context):
 
     # now, use our hard-won type lists to set allowed types
     ptt.getTypeInfo('FormFolder').manage_changeProperties(
-      allowed_content_types = fields + adapters + fieldsets + thankers + \
-        EXTRA_ALLOWED
-      )
+        allowed_content_types=fields + adapters + fieldsets + thankers + EXTRA_ALLOWED)
     for fs in fieldsets:
-        ptt.getTypeInfo(fs).manage_changeProperties(
-          allowed_content_types = fields
-          )
+        ptt.getTypeInfo(fs).manage_changeProperties(allowed_content_types=fields)
